--- a/.github/workflows/azure-cicd.yml
+++ b/.github/workflows/azure-cicd.yml
@@ -101,3 +101,26 @@ jobs:
           
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Auto-Heal Deployment (if Terraform failed)
+        if: always()
+        env:
+          AZURE_OPENAI_RESOURCE_NAME: ${{ secrets.AZURE_OPENAI_RESOURCE_NAME }}
+          AZURE_OPENAI_API_KEY: ${{ secrets.AZURE_OPENAI_API_KEY }}
+          AZURE_OPENAI_ENDPOINT: ${{ secrets.AZURE_OPENAI_ENDPOINT }}
+          AZURE_OPENAI_DEPLOYMENT_NAME: ${{ secrets.AZURE_OPENAI_DEPLOYMENT_NAME }}
+          AZURE_OPENAI_API_VERSION: ${{ secrets.AZURE_OPENAI_API_VERSION }}
+          REPO_NAME_SECRET: ${{ secrets.REPO_NAME_SECRET }}
+        run: |
+          if [[ "$DEPLOYMENT_FAILED" == "true" ]]; then
+            echo "Deployment failed. Running autoheal script..."
+            echo "Checking directory contents before running autoheal:"
+            pwd
+            la -la
+            ls -l $GITHUB_WORKSPACE/terraform
+            echo "Checking GitHub Secrets for OpenAI Resource Name:"
+            echo "AZURE_OPENAI_RESOURCE_NAME=${{ secrets.AZURE_OPENAI_RESOURCE_NAME }}"
+            python3 scripts/autoheal.py
+          else
+            echo "Deployment succeeded. Skipping autoheal."
+          fi
